--- a/MoneyPool/Base.lproj/InviteFriendList.storyboard
+++ b/MoneyPool/Base.lproj/InviteFriendList.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6Ud-XU-hRU">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -65,6 +65,7 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="Yd8-bL-KFQ" firstAttribute="leading" secondItem="iq8-Ja-FDr" secondAttribute="trailing" constant="23" id="306-wA-6Cd"/>
                                                 <constraint firstItem="iq8-Ja-FDr" firstAttribute="leading" secondItem="ITf-ad-MZr" secondAttribute="leading" constant="8" id="4kI-nu-kZ9"/>
                                                 <constraint firstItem="Yd8-bL-KFQ" firstAttribute="centerY" secondItem="ITf-ad-MZr" secondAttribute="centerY" id="BOJ-yq-lUr"/>
                                                 <constraint firstItem="RuG-bc-7ba" firstAttribute="centerY" secondItem="ITf-ad-MZr" secondAttribute="centerY" id="Mli-hy-kfU"/>
@@ -74,6 +75,12 @@
                                                 <constraint firstAttribute="bottom" secondItem="iq8-Ja-FDr" secondAttribute="bottom" constant="2" id="moT-1J-3n5"/>
                                                 <constraint firstItem="RuG-bc-7ba" firstAttribute="trailing" secondItem="ITf-ad-MZr" secondAttribute="trailingMargin" id="yl5-IZ-fD9"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="moT-1J-3n5"/>
+                                                    <exclude reference="SYY-qI-CdP"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="friendImageView" destination="iq8-Ja-FDr" id="iB4-TQ-azs"/>
@@ -104,6 +111,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="glZ-95-QMX"/>
                     <connections>
+                        <outlet property="searchBar" destination="6vk-jL-7DB" id="Zlm-rS-IXh"/>
                         <outlet property="searchDisplayController" destination="Hxk-14-18j" id="4dy-70-bDq"/>
                         <outlet property="tableView" destination="w1M-xz-U70" id="e32-4G-8Mb"/>
                     </connections>
