--- a/MoneyPool/Base.lproj/Main.storyboard
+++ b/MoneyPool/Base.lproj/Main.storyboard
@@ -1,25 +1,145 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kzN-20-9Ij">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Invite Friends List View Controller-->
+        <scene sceneID="vyO-lk-bBH">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="kzN-20-9Ij" customClass="InviteFriendsListViewController" customModule="MoneyPool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="CPI-7i-TGU"/>
+                        <viewControllerLayoutGuide type="bottom" id="mK8-Qq-hbQ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="ZyW-Zd-J6e">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" placeholder="Search Friends" translatesAutoresizingMaskIntoConstraints="NO" id="aOL-SO-nS4">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
+                                <connections>
+                                    <outlet property="delegate" destination="kzN-20-9Ij" id="YT4-QZ-hUl"/>
+                                </connections>
+                            </searchBar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wo7-8N-3lV">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Invite Friends to the Pool" id="pig-wo-m89"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FyE-Vh-Y5o">
+                                <rect key="frame" x="0.0" y="108" width="600" height="422"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="60" id="hXd-ab-3Bc" customClass="InviteFriendListTableViewCell" customModule="MoneyPool" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hXd-ab-3Bc" id="c7H-8G-Scx">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CXq-8r-fbX">
+                                                    <rect key="frame" x="72" y="18" width="345" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fi9-eY-DeE">
+                                                    <rect key="frame" x="442" y="15" width="150" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="9X4-Uv-OIq"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Invite"/>
+                                                    <state key="selected" title="Invited"/>
+                                                    <connections>
+                                                        <action selector="inviteFriendButtonPushed:" destination="hXd-ab-3Bc" eventType="touchUpInside" id="Vhw-JV-Iyd"/>
+                                                    </connections>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4YI-wT-dBI">
+                                                    <rect key="frame" x="8" y="2" width="55" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="55" id="2oQ-lD-eU1"/>
+                                                        <constraint firstAttribute="width" constant="55" id="lMb-tJ-sP7"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Fi9-eY-DeE" firstAttribute="trailing" secondItem="c7H-8G-Scx" secondAttribute="trailingMargin" id="4gA-xe-OoT"/>
+                                                <constraint firstItem="CXq-8r-fbX" firstAttribute="leading" secondItem="4YI-wT-dBI" secondAttribute="trailing" constant="9" id="9FA-Ii-tgm"/>
+                                                <constraint firstItem="Fi9-eY-DeE" firstAttribute="centerY" secondItem="c7H-8G-Scx" secondAttribute="centerY" id="JOE-wt-xAX"/>
+                                                <constraint firstItem="4YI-wT-dBI" firstAttribute="leading" secondItem="c7H-8G-Scx" secondAttribute="leading" constant="8" id="VyA-wb-d5s"/>
+                                                <constraint firstItem="CXq-8r-fbX" firstAttribute="centerY" secondItem="c7H-8G-Scx" secondAttribute="centerY" id="cT3-p2-ipx"/>
+                                                <constraint firstItem="Fi9-eY-DeE" firstAttribute="leading" secondItem="CXq-8r-fbX" secondAttribute="trailing" constant="25" id="qE6-cF-iRC"/>
+                                                <constraint firstItem="4YI-wT-dBI" firstAttribute="centerY" secondItem="c7H-8G-Scx" secondAttribute="centerY" id="yHz-bE-REU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="friendNameLabel" destination="CXq-8r-fbX" id="oOp-gD-1WP"/>
+                                            <outlet property="inviteFriendButton" destination="Fi9-eY-DeE" id="ICg-1u-7Fg"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="kzN-20-9Ij" id="aNU-eh-z0i"/>
+                                    <outlet property="delegate" destination="kzN-20-9Ij" id="aAj-TW-9ku"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mnh-7u-myv">
+                                <rect key="frame" x="258" y="550" width="84" height="30"/>
+                                <state key="normal" title="Send Invites"/>
+                                <connections>
+                                    <action selector="SendInvitesButtonPushed:" destination="kzN-20-9Ij" eventType="touchUpInside" id="wW7-fa-MOh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mnh-7u-myv" firstAttribute="centerX" secondItem="ZyW-Zd-J6e" secondAttribute="centerX" id="5XH-LK-HK3"/>
+                            <constraint firstItem="aOL-SO-nS4" firstAttribute="leading" secondItem="FyE-Vh-Y5o" secondAttribute="leading" id="Byy-P9-KDW"/>
+                            <constraint firstItem="aOL-SO-nS4" firstAttribute="top" secondItem="wo7-8N-3lV" secondAttribute="bottom" id="CDB-Wy-j8f"/>
+                            <constraint firstItem="wo7-8N-3lV" firstAttribute="top" secondItem="CPI-7i-TGU" secondAttribute="bottom" id="DHe-Zd-q8D"/>
+                            <constraint firstItem="mK8-Qq-hbQ" firstAttribute="top" secondItem="FyE-Vh-Y5o" secondAttribute="bottom" constant="70" id="Kfc-i2-PiS"/>
+                            <constraint firstItem="aOL-SO-nS4" firstAttribute="trailing" secondItem="FyE-Vh-Y5o" secondAttribute="trailing" id="Kno-3w-hUD"/>
+                            <constraint firstItem="mK8-Qq-hbQ" firstAttribute="top" secondItem="mnh-7u-myv" secondAttribute="bottom" constant="20" id="Sit-Rw-cpV"/>
+                            <constraint firstItem="wo7-8N-3lV" firstAttribute="leading" secondItem="ZyW-Zd-J6e" secondAttribute="leading" id="Z5J-le-Sf8"/>
+                            <constraint firstAttribute="trailing" secondItem="wo7-8N-3lV" secondAttribute="trailing" id="jSo-ql-msp"/>
+                            <constraint firstItem="FyE-Vh-Y5o" firstAttribute="top" secondItem="aOL-SO-nS4" secondAttribute="bottom" id="s5T-Pe-Mhx"/>
+                            <constraint firstItem="wo7-8N-3lV" firstAttribute="trailing" secondItem="aOL-SO-nS4" secondAttribute="trailing" id="stc-yw-S4m"/>
+                            <constraint firstItem="mnh-7u-myv" firstAttribute="centerX" secondItem="ZyW-Zd-J6e" secondAttribute="centerX" id="upS-Uu-lck"/>
+                            <constraint firstItem="wo7-8N-3lV" firstAttribute="leading" secondItem="aOL-SO-nS4" secondAttribute="leading" id="xYj-9l-rBa"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="upS-Uu-lck"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="UQZ-19-GBT"/>
+                    <connections>
+                        <outlet property="searchBar" destination="aOL-SO-nS4" id="Z1N-nv-BGY"/>
+                        <outlet property="searchDisplayController" destination="Ydd-LY-E0C" id="thp-Ql-pMA"/>
+                        <outlet property="tableView" destination="FyE-Vh-Y5o" id="h4O-wd-6Sb"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f1a-ay-fqY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Ydd-LY-E0C">
+                    <connections>
+                        <outlet property="delegate" destination="kzN-20-9Ij" id="L12-c5-mgJ"/>
+                        <outlet property="searchContentsController" destination="kzN-20-9Ij" id="XK1-gB-Vk3"/>
+                        <outlet property="searchResultsDataSource" destination="kzN-20-9Ij" id="PqB-7r-r62"/>
+                        <outlet property="searchResultsDelegate" destination="kzN-20-9Ij" id="n0D-6J-kL8"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
+            <point key="canvasLocation" x="1647" y="534"/>
         </scene>
     </scenes>
 </document>
