--- a/MoneyPool/Base.lproj/Main.storyboard
+++ b/MoneyPool/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wbk-RE-0dD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2428" y="417"/>
+            <point key="canvasLocation" x="2444" y="402"/>
         </scene>
         <!--Create Pool Request-->
         <scene sceneID="VFW-rB-Pps">
@@ -100,7 +100,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxh-rX-B20">
-                                <rect key="frame" x="220.5" y="473" width="159" height="33"/>
+                                <rect key="frame" x="221" y="473" width="159" height="33"/>
                                 <color key="backgroundColor" red="0.002454093657" green="0.1676112115" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="159" id="h7y-9H-v59"/>
@@ -109,6 +109,9 @@
                                 <state key="normal" title="Invite Friends">
                                     <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="6Zh-W4-gx4" kind="show" identifier="inviteFriends" id="vPv-KR-pL7"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SCHEDULE of PAYMENTS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TI8-8q-tG8">
                                 <rect key="frame" x="175" y="318" width="222" height="21"/>
@@ -144,7 +147,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bxr-zi-hHa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3805" y="417"/>
+            <point key="canvasLocation" x="3789" y="402"/>
         </scene>
         <!--Active Pool View Controller-->
         <scene sceneID="yHD-Qz-shC">
@@ -246,7 +249,142 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1ar-ua-5ln" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3805" y="1085"/>
+            <point key="canvasLocation" x="3789" y="1067"/>
+        </scene>
+        <!--Invite Friends List View Controller-->
+        <scene sceneID="wvJ-tZ-s8m">
+            <objects>
+                <viewController id="6Zh-W4-gx4" customClass="InviteFriendsListViewController" customModule="MoneyPool" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZNp-8V-dEY"/>
+                        <viewControllerLayoutGuide type="bottom" id="Bzi-Cf-mck"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jmu-j2-CfJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Search Friends" translatesAutoresizingMaskIntoConstraints="NO" id="7G6-91-Heo">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
+                                <connections>
+                                    <outlet property="delegate" destination="6Zh-W4-gx4" id="IdK-iH-ShT"/>
+                                </connections>
+                            </searchBar>
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DWN-rj-ue1">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Invite Friends to the Pool" id="xGW-gv-lHE"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l4l-8o-ii2">
+                                <rect key="frame" x="0.0" y="108" width="600" height="422"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="60" id="mIU-uY-NzJ" customClass="InviteFriendListTableViewCell" customModule="MoneyPool" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mIU-uY-NzJ" id="C2V-zu-prF">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qP6-Mc-GV5">
+                                                    <rect key="frame" x="72" y="18" width="345" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3to-uu-Dt4">
+                                                    <rect key="frame" x="442" y="15" width="150" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="oiA-Gp-AbH"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Invite"/>
+                                                    <state key="selected" title="Invited"/>
+                                                    <connections>
+                                                        <action selector="inviteFriendButtonPushed:" destination="mIU-uY-NzJ" eventType="touchUpInside" id="dpC-yi-fhu"/>
+                                                    </connections>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ohz-bH-5nN">
+                                                    <rect key="frame" x="8" y="2" width="55" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="55" id="cJV-WP-rQw"/>
+                                                        <constraint firstAttribute="height" constant="55" id="dTl-oE-xuh"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ohz-bH-5nN" firstAttribute="leading" secondItem="C2V-zu-prF" secondAttribute="leading" constant="8" id="Ell-PB-lhh"/>
+                                                <constraint firstItem="qP6-Mc-GV5" firstAttribute="centerY" secondItem="C2V-zu-prF" secondAttribute="centerY" id="J4s-lI-BNJ"/>
+                                                <constraint firstItem="3to-uu-Dt4" firstAttribute="centerY" secondItem="C2V-zu-prF" secondAttribute="centerY" id="MIB-EK-FIY"/>
+                                                <constraint firstItem="3to-uu-Dt4" firstAttribute="leading" secondItem="qP6-Mc-GV5" secondAttribute="trailing" constant="25" id="OeQ-gT-jUt"/>
+                                                <constraint firstItem="ohz-bH-5nN" firstAttribute="centerY" secondItem="C2V-zu-prF" secondAttribute="centerY" id="gsE-x9-ELN"/>
+                                                <constraint firstItem="3to-uu-Dt4" firstAttribute="trailing" secondItem="C2V-zu-prF" secondAttribute="trailingMargin" id="t6q-gU-e4J"/>
+                                                <constraint firstItem="qP6-Mc-GV5" firstAttribute="leading" secondItem="ohz-bH-5nN" secondAttribute="trailing" constant="9" id="tcD-vo-txW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="friendNameLabel" destination="qP6-Mc-GV5" id="KXd-Wp-hQZ"/>
+                                            <outlet property="inviteFriendButton" destination="3to-uu-Dt4" id="dX5-GI-aqV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6Zh-W4-gx4" id="GgX-lE-qCZ"/>
+                                    <outlet property="delegate" destination="6Zh-W4-gx4" id="zXU-xc-ZeQ"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aX6-bV-3PW">
+                                <rect key="frame" x="258" y="550" width="84" height="30"/>
+                                <state key="normal" title="Send Invites"/>
+                                <connections>
+                                    <action selector="SendInvitesButtonPushed:" destination="6Zh-W4-gx4" eventType="touchUpInside" id="7JC-UP-eEp"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aX6-bV-3PW" firstAttribute="centerX" secondItem="jmu-j2-CfJ" secondAttribute="centerX" id="0DM-sI-f7j"/>
+                            <constraint firstItem="7G6-91-Heo" firstAttribute="top" secondItem="DWN-rj-ue1" secondAttribute="bottom" id="5lR-0r-4cR"/>
+                            <constraint firstItem="aX6-bV-3PW" firstAttribute="centerX" secondItem="jmu-j2-CfJ" secondAttribute="centerX" id="Alq-Io-a7o"/>
+                            <constraint firstItem="DWN-rj-ue1" firstAttribute="leading" secondItem="jmu-j2-CfJ" secondAttribute="leading" id="Cgw-Zp-Go8"/>
+                            <constraint firstItem="Bzi-Cf-mck" firstAttribute="top" secondItem="aX6-bV-3PW" secondAttribute="bottom" constant="20" id="KoX-ts-07C"/>
+                            <constraint firstItem="l4l-8o-ii2" firstAttribute="top" secondItem="7G6-91-Heo" secondAttribute="bottom" id="PuA-b8-cBC"/>
+                            <constraint firstItem="DWN-rj-ue1" firstAttribute="leading" secondItem="7G6-91-Heo" secondAttribute="leading" id="ZdR-5q-3bP"/>
+                            <constraint firstItem="7G6-91-Heo" firstAttribute="trailing" secondItem="l4l-8o-ii2" secondAttribute="trailing" id="agw-oB-D63"/>
+                            <constraint firstItem="7G6-91-Heo" firstAttribute="leading" secondItem="l4l-8o-ii2" secondAttribute="leading" id="eq5-JW-wdm"/>
+                            <constraint firstItem="DWN-rj-ue1" firstAttribute="trailing" secondItem="7G6-91-Heo" secondAttribute="trailing" id="fKK-5C-2JV"/>
+                            <constraint firstAttribute="trailing" secondItem="DWN-rj-ue1" secondAttribute="trailing" id="icI-aD-OBK"/>
+                            <constraint firstItem="DWN-rj-ue1" firstAttribute="top" secondItem="ZNp-8V-dEY" secondAttribute="bottom" id="ixc-Px-htS"/>
+                            <constraint firstItem="Bzi-Cf-mck" firstAttribute="top" secondItem="l4l-8o-ii2" secondAttribute="bottom" constant="70" id="pl6-96-rzQ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0DM-sI-f7j"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="1nN-GP-Btt"/>
+                    <connections>
+                        <outlet property="searchBar" destination="7G6-91-Heo" id="wjJ-cH-4xd"/>
+                        <outlet property="searchDisplayController" destination="CBi-99-uFK" id="fY3-wW-jgk"/>
+                        <outlet property="tableView" destination="l4l-8o-ii2" id="egg-t4-KuK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fvA-rm-rYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="CBi-99-uFK">
+                    <connections>
+                        <outlet property="delegate" destination="6Zh-W4-gx4" id="Lgh-an-IHh"/>
+                        <outlet property="searchContentsController" destination="6Zh-W4-gx4" id="jPR-qk-O4u"/>
+                        <outlet property="searchResultsDataSource" destination="6Zh-W4-gx4" id="tLD-ST-GKV"/>
+                        <outlet property="searchResultsDelegate" destination="6Zh-W4-gx4" id="tUa-bG-WF3"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="4457" y="402"/>
         </scene>
     </scenes>
 </document>
